# Computer-Vision

./: .gitignore  CMakeLists.txt  README.md  build.sh  color_dist.cpp  cv.sublime-project  cvp.sublime-project
ex_2_fast_median/: benchmark.plot  benchmark.sh  resize.sh
ex_3_dft/: CMakeLists.txt  README.md
ex_3_fourier/: .gitignore  CMakeLists.txt  README.md  magnitude.cpp  shape.cpp
ex_3_fourier_descriptors/: CMakeLists.txt  descriptor.cpp  magnitude.cpp
ex_4_panorma_stitching/: .astylerc  .floo  .flooignore  .gitignore  CMakeLists.txt  README.md  clean.sh  readme.txt
ex_4_panorma_stitching/makefile/: Makefile
ex_4_panorma_stitching/src/: harris.cpp  homographies.cpp  local_maxima.cpp  marriage.cpp  matching.cpp  mean.cpp  panorama.cpp  panorama.hpp  ps.h  ps_main.cpp  render.cpp  saves.cpp
exercise_2_fast_median_filter/: CMakeLists.txt  README.md  benchmark.plot  benchmark.sh  fast_median_filter.cpp
lab_2_camera_perspective/: README.md
lab_3_correlation/: CMakeLists.txt  README.md
lab_3_gray_transformation/: .gitignore  CMakeLists.txt  README.md  gray_trans.cpp
lab_3_histogram_color/: .gitignore  CMakeLists.txt  README.md  histo_color.cpp  histogram.cpp  histogram.h
lab_3_histogram_equalization/: README.md  equalize_histo.cpp
lab_3_histogram_gray/: .gitignore  CMakeLists.txt  README.md  histo_gray.cpp  histogram.cpp  histogram.h
lab_3_histogram_matching/: CMakeLists.txt  README.md  histo_match.cpp
lab_3_pattern_matching/: .gitignore  CMakeLists.txt  README.md  match.cpp
lab_3_threshold_mean_filter/: .gitignore  CMakeLists.txt  README.md  (+1 more)
(+28 files in other folders)
